--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@ h4 {
 .transparent {
   background-color: rgba(255, 255, 255, 0.7);
   width: 100%;
-  height: 100%;
+  height: 1000px; /*changed to px value because of missing bottom on my laptop, may not need to be this tall, on my screen it was about 300px too short - the transparent div when the player card was shown did not drop down to cover the whole map */
 }
 .red {
   width: 70px;
