--- a/css/styles.css
+++ b/css/styles.css
@@ -85,10 +85,15 @@ h4 {
   border-radius: 15px;
   padding: 15px;
   box-shadow: 3px 3px 10px grey;
-  /*max-width: 200px;
-  min-width: 200px;*/
   box-sizing: border-box;
+  cursor: pointer;
 }
+
+#teams h4:hover {
+  text-shadow: 2px 2px 5px grey;
+
+}
+
 #winner {
   font-size: 25px;
 }
@@ -96,7 +101,6 @@ h4 {
   width: 70px;
   height: 70px;
   background-color: #b30000;
-  /*background-color: #993300;*/
   margin-right: 20px;
   margin-top: 20px;
   border-radius: 10px;
