--- a/css/styles.css
+++ b/css/styles.css
@@ -14,8 +14,38 @@ h1 {
   text-align: center;
 }
 
+h3 {
+  text-align: center;
+  font-size: 30px;
+}
+
 h4 {
   font-size: 30px;
+}
+
+li.p1:hover {
+  text-shadow: 3px 3px 10px #bfbfbf;
+  cursor: pointer;
+}
+
+li.p2:hover {
+  text-shadow: 3px 3px 10px #bfbfbf;
+  cursor: pointer;
+}
+
+li.p3:hover {
+  text-shadow: 3px 3px 10px #bfbfbf;
+  cursor: pointer;
+}
+
+li.p4:hover {
+  text-shadow: 3px 3px 10px #bfbfbf;
+  cursor: pointer;
+}
+
+li.p5:hover {
+  text-shadow: 3px 3px 10px #bfbfbf;
+  cursor: pointer;
 }
 
 #dice button {
@@ -37,26 +67,6 @@ h4 {
   font-size: 20px;
 }
 
-.p1 {
-  color: goldenrod;
-}
-
-.p2 {
-  color: darkgreen;
-}
-
-.p3 {
-  color: darkblue;
-}
-
-.p4 {
-  color: darkred;
-}
-
-.p5 {
-  color: black;
-}
-
 #dice {
   text-align: center;
   margin-top: 20px;
@@ -69,6 +79,11 @@ h4 {
   display: none;
   box-sizing: border-box;
 }
+
+#winner {
+  font-size: 25px;
+}
+
 #battle:active,
 #battle:focus,
 #battle.active {
@@ -94,9 +109,29 @@ h4 {
 
 }
 
-#winner {
-  font-size: 25px;
+#letsPlay {
+  margin-left: 35%;
 }
+
+.container {
+  display: none;
+}
+ .intro #teams{
+  margin-left: 42%;
+  margin-top: 15%;
+  text-align: left;
+  max-width: 300px;
+}
+.intro label {
+  font-family: 'Baloo Paaji', cursive;
+  cursor: pointer;
+  font-size: 30px;
+  padding: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+}
+
 .red {
   width: 70px;
   height: 70px;
@@ -135,4 +170,24 @@ h4 {
 
 .attack {
   /*display: none;*/
+}
+
+.p1 {
+  color: goldenrod;
+}
+
+.p2 {
+  color: darkgreen;
+}
+
+.p3 {
+  color: darkblue;
+}
+
+.p4 {
+  color: darkred;
+}
+
+.p5 {
+  color: black;
 }
